@startuml
'https://plantuml.com/object-diagram

class Main
class Building
class Room

Main : + static int countLampsInBuilding(Building b)
Main : + static boolean isNormal(Building b)

Building : + Building(ArrayList<Room> rooms, int numberOfBathrooms, int numberOfFloors, boolean isOfficeBuilding)
Building : - ArrayList<Room> rooms
Building : - int numberOfBathrooms
Building : - int numberOfFloors
Building : - boolean isOfficeBuilding
Building : + ArrayList<Room> getRooms()
Building : + int getNumberOfBathrooms()
Building : + int getNumberOfFloors()
Building : + boolean getIsOfficeBuilding()

Room : + Room(int numberOfDoors, int numberOfLamps, int numberOfWindows)
Room : - int numberOfDoors
Room : - int numberOfLamps
Room : - int numberOfWindows
Room : + int getNumberOfDoors()
Room : + int getNumberOfLamps()
Room : + int getNumberOfWindows()

Main *-- Building
Building *-- Room : has-a

@enduml
